AC_INIT(maxtime.c)

VERSION="0.35a"
AC_SUBST(VERSION)

AC_PROG_CC
AC_LANG_C

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_HEADER_STDC dnl stdlib.h, stdarg.h, string.h and float.h
AC_CHECK_HEADER(unistd.h,,AC_MSG_ERROR(Error: unistd.h not found))
AC_CHECK_HEADER(stdlib.h,,AC_MSG_ERROR(Error: stdlib.h not found))
AC_CHECK_HEADER(signal.h,,AC_MSG_ERROR(Error: signal.h not found))
AC_CHECK_HEADER(stdio.h,,AC_MSG_ERROR(Error: stdio.h not found))
AC_CHECK_HEADER(sys/types.h,,AC_MSG_ERROR(Error: sys/types.h not found))
AC_CHECK_HEADER(sys/wait.h,,AC_MSG_ERROR(Error: sys/wait.h not found))
AC_CHECK_HEADER(sys/time.h,,AC_MSG_ERROR(Error: sys/time.h not found))

AC_OUTPUT(Makefile)

